fdo#46990 - detect MATE and XFCE desktops.

Change-Id: Id72860fc2e7d6b40f4fcb96b8f504a4f86a335b1