vcl/inc/unx/desktops.hxx
@@ -24,6 +24,8 @@ enum DesktopType {
     DESKTOP_NONE, // headless, i.e. no X connection at all
     DESKTOP_UNKNOWN, // unknown desktop, simple WM, etc.
     DESKTOP_GNOME,
+    DESKTOP_XFCE,
+    DESKTOP_MATE,
     DESKTOP_KDE,
     DESKTOP_KDE4,
     DESKTOP_TDE
